<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThursdayFragment">


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" >

        <RelativeLayout
            android:id="@+id/relative5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/linear5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/className5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/crypto"
                    android:textSize="30dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/classTime5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time_morning"
                    android:textSize="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/classLocation5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location2"
                    android:textSize="20dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/className6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/algo"
                    android:textSize="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/classTime6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time_evening"
                    android:textSize="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/classLocation6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location3"
                    android:textSize="20dp"
                    android:layout_weight="1"/>

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>