<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TuesdayFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" >

        <RelativeLayout
            android:id="@+id/relative2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/className2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/crypto"
                    android:textSize="30dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/classTime2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time_morning"
                    android:textSize="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/classLocation2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location2"
                    android:textSize="20dp"
                    android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/className3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/algo"
                        android:textSize="30dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/classTime3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/time_evening"
                        android:textSize="20dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/classLocation3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/location3"
                        android:textSize="20dp"
                        android:layout_weight="1"/>

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>