<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MondayFragment">

   <androidx.cardview.widget.CardView
       android:id="@+id/mon_card"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_margin="10dp" >

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content" >

           <LinearLayout
               android:id="@+id/linear1"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:padding="10dp"
               android:gravity="center"
               android:orientation="vertical" >

               <TextView
                   android:id="@+id/className1"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/comp_prin"
                   android:textSize="30dp"
                   android:layout_marginBottom="10dp"
                   android:layout_weight="1" />

               <TextView
                   android:id="@+id/classTime1"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/time_evening"
                   android:textSize="20dp"
                   android:layout_marginBottom="10dp"
                   android:layout_weight="1"/>

               <TextView
                   android:id="@+id/classLocation1"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/location1"
                   android:textSize="20dp"
                   android:layout_weight="1"/>

           </LinearLayout>

       </RelativeLayout>

   </androidx.cardview.widget.CardView>

</FrameLayout>